--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="stars"></div>
     <div class="intro-container">
         <h1>Earthquake Analyst</h1>
-        <p>Welcome to a next-gen seismic experience. Monitor real-time earthquake data, uncover cosmic patterns, and get AI-driven insights—all in a sleek, futuristic interface. Tap to launch your exploration.</p>
+        <p>Welcome to a next-gen seismic experience. Monitor real-time earthquake data, uncover cosmic patterns, and get AI-driven insights. Tap to launch your exploration.</p>
         <button class="start-button" onclick="window.location.href='main.html'">Tap to Start</button>
     </div>
 </body>
